Afegida teoria a la secció de les fórmules de Frenet, fins abans de definir l'orientació d'un espai vectorial.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -158,6 +158,8 @@
 \newcommand{\e}{\mathrm{e}}
 \newcommand{\iu}{\mathrm{i}}
 \newcommand{\uppi}{\pi} % REVISIT
+\newcommand{\prodesc}[2]{
+	\langle#1,#2\rangle}
 
 %\setcounter{chapter}{-1}
 
