Arreglats errors petits

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1085,7 +1085,7 @@
 		\end{comment}
 		\end{proof}
 	\end{theorem}
-	\section{Successions funcions}
+	\section{Successions de funcions}
 	\subsection{Convergència d'una successió de funcions}
 	\begin{definition}[Successió de funcions]
 		\labelname{successió de funcions}\label{def:successió de funcions}
