--- a/Apunts.tex
+++ b/Apunts.tex
@@ -168,8 +168,11 @@
 \newcommand{\corollari}{coro{\lgem}ari }
 \newcommand{\Corollari}{Coro{\lgem}ari }
 
-\newcommand{\anglelogos}{337.5}
+\makeatletter
+\newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
+\makeatother
 
+\newcommand{\anglelogos}{337.5}
 \newcommand*{\titleTMB}{\begingroup% Three Men in a Boat
 	\vspace*{0.1\textheight}
 	\centering
@@ -299,6 +302,15 @@
 		\end{titlingpage*}}
 }
 
+\newcommand{\gracies}{
+	\thispagestyle{empty}
+	\chapter*{Agraïments}
+	M'agradaria donar les gràcies a l'Arnau José, el meu fillol, pels seus apunts d'anàlisi matemàtica; i a l'Àlex Miranda pels seus apunts de geometria diferencial i equacions diferencials ordinàries \rom{2}, a més d'haver-me avisat d'un munt d'errors per tot arreu.
+	
+	Sobretot agrair a l'Aure Losquiño per seguir de ben a prop el progrés i l'evolució de l'escrit amb una visió molt	 crítica des del començament, trobant-me també mil errors i discutint maneres d'afrontar els múltiples problemes que he trobat escrivint tot això.
+	\clearpage
+}
+
 \newcommand{\tauladecontinguts}{
 	{\hypersetup{urlcolor=black,linkcolor=black}
 	\tableofcontents}
@@ -400,6 +412,7 @@
 
 \begin{document}
 	\portada
+%	\gracies
 	\tauladecontinguts
 	\subfile{parts/FNM.tex}
 	\subfile{parts/AlgebraLineal.tex}
