Afegida teoria i exemples a geometria diferencial, fins abans de definir l'orientació d'un espai vectorial.

--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -1,7 +1,7 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\part{Equacions diferencials ordinàries I}
+\part{Equacions diferencials ordinàries \rom{1}}
 \chapter{Equacions diferencials de primer ordre en una variable}
 	\section{Espai de funcions contínues i acotades}
 	\subsection{L'espai de funcions contínues i acotades és complet}
