--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -1,6 +1,6 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\part{Equacions diferencials ordinàries II}
+\part{Equacions diferencials ordinàries \rom{2}}
 
 \end{document} 
