--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -23,6 +23,14 @@
 	\begin{definition}[Norma d'una aplicació lineal]
 		\labelname{norma d'una aplicació lineal}\label{def:Norma d'una aplicació lineal}
 	\end{definition}
+	\begin{definition}[Producte escalar]
+		\labelname{producte escalar}\label{def:producte escalar}
+		És lineal i més coses.
+	\end{definition}
+	\begin{definition}[Dependència lineal]
+		\labelname{dependència lineal}\label{def:dependència lineal}
+		\labelname{vectors linealment dependents}\label{def:vectors linealment dependents}
+	\end{definition}
 	\subsection{Proposicions}
 	\begin{proposition}\label{prop:determinant diferent de zero linealment independents}
 		Vectors linealment independents \(\sii\) determinant no nul.
