--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -2,5 +2,25 @@
 
 \begin{document}
 \part{Equacions diferencials ordinàries \rom{2}}
-
+\chapter{Sistemes autònoms al pla}
+	\section{Sistemes autònoms a \ensuremath{\mathbb{R}^{n}}}
+%	\subsection{Interpretació geomètrica} % Justificació dels retrats de fase? Això a EDOS I
+	\subsection{Estructura de les òrbites}
+	\subsection{Integrals primeres}
+	\subsection{Superfícies invariants}
+	\subsection{Retrat de fase i conjugació}
+	\section{Sistemes integrables}
+	\subsection{Sistemes potencials}
+	\subsection{Sistemes Hamiltonians}
+	\subsection{El model de Lotka-Volterra}
+	\section{Sistemes no integrables}
+	\subsection{Teorema del flux tubular}
+	\subsection{Anàlisi qualitativa dels punts d'equilibri}
+	\subsection{Comportament límit de les òrbites}
+	\subsection{Teorema de Bendixson-Poincaré}
+	\subsection{Funcions de Liapunov}
+	\subsection{Cicles límit}
+	\subsection{Criteri de Bendixson-Dulac}
+	\subsection{Models a l'ecologia}
+	\subsection{Sistema de van der Pol}
 \end{document} 
