--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1242,7 +1242,7 @@
 	\end{proposition}
 	\begin{lemma}
 		\label{lema:thm:Teorema Fonamental de l'Aritmètica 1}
-		Sigui \(a\) un enter amb \(a>1\). Aleshores existeixen \(p_{1},\dots,p_{n}\) primers tals que
+		Sigui \(a\) un enter amb \(a>1\). Aleshores existeixen \(p_{1},\dots,p_{n}\) primers i \(r_{1},\dots,r_{n}\) enters positius tals que
 		\[a=p_{1}^{r_{n}}\cdots p_{n}^{r_{n}}.\]
 		\begin{proof}
 			Observem primer que si \(a\) és primer tenim \(a=a\) i aquest cas particular de l'enunciat és cert.
