--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -261,7 +261,7 @@
 		\label{prop:l'interior d'un conjunt és un obert}
 		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(A\) un subconjunt de \(X\). Aleshores \(\interior(A)\) és un obert.
 		\begin{proof}
-			Prenem un element \(x\) de \(\interior(A)\). Per la definició d'\myref{def:interior} tenim que existeix un obert \(\obert{U}_{x}\) tal que \(x\in\obert{U}_{x}\) i \(\obert{U}_{x}\subseteq A\). Aleshores tenim
+			Prenem un punt \(x\) de \(\interior(A)\). Per la definició d'\myref{def:interior} tenim que existeix un obert \(\obert{U}_{x}\) tal que \(x\in\obert{U}_{x}\) i \(\obert{U}_{x}\subseteq A\). Aleshores tenim
 			\begin{align*}
 				\interior(A)&=\bigcup_{x\in\interior(A)}\{x\} \\
 				&\subseteq\bigcup_{x\in\interior(A)}\obert{U}_{x} \\
