Demostració de la suposada fórmula de Leibniz a geometria diferencial i afegides seccions i subseccions a EDOS II, per planificar

--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -23,4 +23,16 @@
 %	\subsection{Criteri de Bendixson-Dulac}
 %%	\subsection{Models a l'ecologia}
 %	\subsection{Sistema de van der Pol}
+%\chapter{Equacions en derivades parcials}
+%	\section{Equacions en derivades parcials de primer ordre}
+%	\subsection{Introducció a les equacions en derivades parcials}
+%	\subsection{Equacions lineals i quasi-lineals de primer odre}
+%	\section{Equacions en derivades parcials de segon ordre}
+%	\subsection{Equacions de la corda finita}
+%	\subsection{Principi d'Alembert}
+%	\subsection{Problemes de contorn}
+%	\subsection{L'equació de la calor}
+%	\subsection{Problema de la barra infinita}
+%	\subsection{Separació de variables i sèries de Fourier}
+%	\subsection{L'equació de Laplace}
 \end{document} 
