Afegides primeres definicions i observacions a la secció de les fórmules de Frenet.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -130,6 +130,9 @@
 \DeclareMathOperator{\Antiima}{\Ima^{-1}}
 \DeclareMathOperator{\cosdefraccions}{Q}
 \DeclareMathOperator{\funciolongituddarc}{S}
+\DeclareMathOperator{\curvatura}{\kappa}
+\DeclareMathOperator{\tangent}{T}
+\DeclareMathOperator{\normal}{N}
 
 \DeclareMathOperator*{\suport}{Supp}
 
@@ -161,7 +164,7 @@
 \newcommand{\iu}{\mathrm{i}}
 \newcommand{\uppi}{\pi} % REVISIT
 \newcommand{\prodesc}[2]{
-	\langle#1,#2\rangle}
+	\left\langle#1,#2\right\rangle}
 
 %\setcounter{chapter}{-1}
 
