--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -217,6 +217,10 @@
 		\[A\uniodisjunta B=(A\times\{0\})\cup(B\times\{1\})\]
 		com la unió disjunta entre \(A\) i \(B\).
 	\end{definition}
+	\begin{definition}[Vectors perpendiculars]
+		\labelname{vectors perpendiculars}\label{def:vectors perpendiculars}
+		\[\prodesc{\vec{u}}{\vec{v}}=0.\]
+	\end{definition}
 %	\begin{theorem}[Teorema de la divisió Euclidiana]
 %		\labelname{Teorema de la divisió Euclidiana}\label{thm:divisió euclidiana}
 %	\end{theorem}
